--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,10 @@
          <a href="tunes.html" >Tunes | </a>
          <a href="whats-the-stack.html" >What's The Stack | </a>
          <a href="recommendations.html" >Recommendations </a> 
+         <a href="recommendations.html" >Recommendations 2 </a> 
+
      </div>
+     <!--test-->
 
     <body>
 
