Media Queries Added

--- a/index.html
+++ b/index.html
@@ -2,64 +2,68 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title> Emily Conaghan Portfolio</title>
-        <meta name="description" content="Emily Conaghan Portfolio">
-        <meta name="author" content="Emily Conaghan">
-        <link rel="stylesheet" href="styles.css"> 
-    </head>
 
-    <!-- Content/ Body Section-->
+<head>
+    <meta charset="utf-8">
+    <title> Emily Conaghan Portfolio</title>
+    <meta name="description" content="Emily Conaghan Portfolio">
+    <meta name="author" content="Emily Conaghan">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-    <div class="nav">
+<!-- Content/ Body Section-->
+
+<div class="nav">
     <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a>
-    </div>
+</div>
 
-    <body class="index-body">
-        <header>
-            <!--Cover Image-->
-           <img class="banner-image" id="homepage-banner" src="images/emily-conaghan.jpg" alt="Emily Conaghan Cover Image">
-        </header>
-        <div>
-            <p>Welcome to my portfolio!</p>
-        </div>
-    </body>
+<body class="index-body">
+    <header>
+        <!--Cover Image-->
+        <img class="banner-image" id="homepage-banner" src="images/emily-conaghan.jpg" alt="Emily Conaghan Cover Image">
+    </header>
+    <div>
+        <p>Welcome to my portfolio!</p>
+    </div>
+</body>
 
 
 </html>
 
 <body>
-    <div class="index-div" id="index-div-1">
-        <a href="about-me.html">About Me</a>   
-    </div>
+    <div class="whole-div">
+        <div class="index-div" id="index-div-1">
+            <a href="about-me.html">About Me</a>
+        </div>
 
-    <div class="index-div" id="index-div-2">
-        <a href="portfolio.html" >Portfolio</a> 
-    </div>
-    
-    <div class="index-div" id="index-div-3">
-        <a href="contact.html" >Contact Me</a>
-    </div>
+        <div class="index-div" id="index-div-2">
+            <a href="portfolio.html">Portfolio</a>
+        </div>
 
-    <div class="index-div" id="index-div-4">
-        <a href="tunes.html" >Tunes</a>
-    </div>
+        <div class="index-div" id="index-div-3">
+            <a href="contact.html">Contact Me</a>
+        </div>
 
-    <div class="index-div" id="index-div-5"> 
-        <a href="whats-the-stack.html" >What's The Stack</a>
-    </div>
+        <div class="index-div" id="index-div-4">
+            <a href="tunes.html">Tunes</a>
+        </div>
 
-    <div class="index-div" id="index-div-6"> 
-        <a href="recommendations.html" >Recommendations</a>    
+        <div class="index-div" id="index-div-5">
+            <a href="whats-the-stack.html">What's The Stack</a>
+        </div>
+
+        <div class="index-div" id="index-div-6">
+            <a href="recommendations.html">Recommendations</a>
+        </div>
     </div>
 
 </body>
-    
+
 <footer>
     <nav>
         <a href="https://www.linkedin.com/in/emily-conaghan/">LinkedIn</a>
         <a href="https://github.com/emilyconaghan/emilyconaghan">Github</a>
     </nav>
 </footer>
-
