--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Content/ Body Section-->
 
 <div class="nav">
-    <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a>
+    <a class="logo" href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a>
 </div>
 
 <body class="index-body">
