Updates to Portfolio - 23/04/22

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <!-- Content/ Body Section-->
 
-<div class="nav">
-    <a class="logo" href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a>
+<div class="logo">
+    <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a>
 </div>
 
 <body class="index-body">
