--- a/recommendations.html
+++ b/recommendations.html
@@ -1,30 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+
+<head>
         <meta charset="utf-8">
         <title> Emily Recommends</title>
         <meta name="description" content="Emily Recommends">
         <meta name="author" content="Emily Conaghan">
-        <link rel="stylesheet" href="styles.css"> 
-    </head>
+        <link rel="stylesheet" href="styles.css">
+</head>
 
-    <div class="nav">
-        <div class="logo"> <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a></div>
-         <a href="about-me.html">About Me | </a>  
-         <a href="portfolio.html" >Portfolio | </a> 
-         <a href="contact.html" >Contact Me | </a>
-         <a href="tunes.html" >Tunes | </a>
-         <a href="whats-the-stack.html" >What's The Stack | </a>
-         <a href="recommendations.html" >Recommendations </a> 
-     </div>
+<div class="nav">
+        <div class="logo"> <a href="index.html"><img id="logo-image" src="images/Logo.png"
+                                alt="Emily Conaghan Logo"></a>
+        </div>
+        <a href="about-me.html">About Me | </a>
+        <a href="portfolio.html">Portfolio | </a>
+        <a href="contact.html">Contact Me | </a>
+        <a href="tunes.html">Tunes | </a>
+        <a href="whats-the-stack.html">What's The Stack | </a>
+        <a href="recommendations.html">Recommendations </a>
+</div>
 
-    <body>
+<body>
         <header>
-            <!--Cover Image-->
-           <img class="banner-image" id="recommendations-banner" src="images/recommendations.jpg" alt="Tunes Cover Image">
-            <!--Navigation links to other pages-->
-            <nav>
-                <a href="index.html">Home</a>
-            </nav>     
+                <!--Cover Image-->
+                <img class="banner-image" id="recommendations-banner" src="images/recommendations.jpg"
+                        alt="Tunes Cover Image">
         </header>
-    </body>
+</body>
+
+<div class="Recommendation Intro">
+        <H1>If there’s two things I love, it’s content and recommendations. </H1>
+        <H2>I love sharing my favourite things I’ve read, listened to and watched and I love receiving a good
+                recommendation
+                in return. Here’s a pretty extensive list of some of my favourite things* (sort of like Oprah, but with
+                less
+                yelling and free cars…):</H2>
+
+</div>
+
+<div class="Podcasts">
+        <H2>Podcasts:</H2>
+
+        <ul>
+                <li><a href="https://open.spotify.com/show/6kAsbP8pxwaU2kPibKTuHE?si=cntseOJBTtODLV38kdJ76Q">Armchair
+                                Expert</a>
+                </li>
+                <li><a href="https://open.spotify.com/show/3qJmuhoinS5aZhQpFnNF7X?si=px-4oTLDR329t_ROi-R1lQ">What The
+                                Flux</a>
+                </li>
+                <li><a href="https://open.spotify.com/show/4t8vTNcoReWjeA6wzidtKQ?si=MMhKaQN-RYyKZrvLVZBFAA">Finding
+                                Drago</a>
+                </li>
+                <li><a href="https://open.spotify.com/show/6w97FzDaRfaE4jWz98npWQ?si=AO3wtDmQT3isx2TyiuBajg">Sentimental
+                                Garbage</a></li>
+                <li><a href="https://open.spotify.com/show/6ZmSCzsv0W2ZZAPFCbqhOd?si=DlyzeEV8QwSw53QX5T0i7Q">The
+                                Imperfects </a>
+                </li>
+                <li><a href="https://open.spotify.com/show/03Er7mSPq9IEewOgbPD3vO?si=_BQoJ14NSw6nJsiaRLTYtQ">Modern
+                                Love</a>
+                </li>
+                <li><a href="https://open.spotify.com/show/6I73b0kVHO6bg3FOmFUpdA?si=sTBEJ8iwRfGj365KK6gXWA">The Cut</a>
+                </li>
+                <li><a href="https://open.spotify.com/show/7lrJqILWfMuQhqDHJEFUK6?si=fknUgc8aTDa48rF1GZguBg">The Dropout
+                        </a>
+                </li>
+                <li><a href="https://open.spotify.com/show/7IcasEqPHihZ1fj8l4oz8c?si=5gH4G9fmQoeqFLOVECiFQg">After Work
+                                Drinks
+                        </a></li>
+                <li><a href="https://open.spotify.com/show/6i8DtrUgZY9IPA5T3OR6qa?si=MlrA3zmDRsiDVLkp3temkA">Don’t You
+                                Know Who
+                                I Am </a></li>
+                <li><a href="https://open.spotify.com/show/2ZmPhp7A4zEjfmL2TBbqa9?si=Y6lY3ALKQ_eKsTCZvX5ZKQ">Unpacking
+                                Brisbane
+                        </a></li>
+                <li><a href="https://open.spotify.com/show/72aAN5IL2AGTzx6YRvzLsk?si=9JBP1jnESz-Nyb93v3ab6g">Batch
+                                Bitch</a>
+                </li>
+                <li>Teachers Pet</li>
+                <li><a href="https://open.spotify.com/show/1NpAwUFhZUsO8FkifAxgWt?si=M7KZlihcR3mKJ8Op66qbyQ">Who The
+                                Hell Is
+                                Hamish?</a></li>
+                <li><a href="https://open.spotify.com/show/5wMPFS9B5V7gg6hZ3UZ7hf?si=kiczUprLSZCtevz4kGPVgg">Serial</a>
+                </li>
+                <li><a href="https://open.spotify.com/show/1KPTM79Wn9vkWX0UoMYyrd?si=BWYAn_avRIqVB9TMZOdfsg">S-Town</a>
+                </li>
+                <li><a href="https://open.spotify.com/show/03Er7mSPq9IEewOgbPD3vO?si=_BQoJ14NSw6nJsiaRLTYtQ">Modern
+                                Love</a>
+                </li>
+                <li><a href="https://open.spotify.com/show/0E7Js81KkQ0CWzfROJh04n?si=Au2FFHwgRk2_UUyzjD6XYw">36
+                                Questions</a>
+                </li>
+                <li><a href="https://open.spotify.com/show/6eNvlBxkctgsZ00CCqnBbc?si=Puh-3R8LQRyNQoag-tzyUw">Boners of
+                                the Heart
+                        </a></li>
+                <li><a href="https://open.spotify.com/show/7HrJbLe9LcLknKJ2mf6KVx?si=spGqOYkTRHSpfoUQLJL_RA">Big Natural
+                                Talents</a></li>
+                <li><a href="https://open.spotify.com/show/10lMwCjvzLCLwth2AW6cLG?si=gaLn0iUhSOSKGP9KW9-IrQ">Song
+                                Exploder </a>
+                </li>
+        </ul>
+
+</div>
+
+<div class="TV">
+        <H2>TV Series:</H2>
+
+        <ul>
+                <li><a href="https://www.justwatch.com/au/tv-show/girls">Girls</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/fleabag">Fleabag</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/normal-people">Normal People</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/succession">Succession</a></li>
+                <li><a href=" https://www.justwatch.com/au/tv-show/starstruck-2021">Starstruck</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/search-party">Search Party</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/cheer">Cheer</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/ted-lasso">Ted Lasso</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/the-sex-lives-of-college-girls">The Sex Lives of
+                                College Girls</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/the-morning-show-2019">Morning Wars</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/maid">Maid</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/sex-education">Sex Education</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/barry">Barry</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/please-like-me">Please Like Me</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/industry">Industry</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/big-little-lies">Big Little Lies</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/high-fidelity">High Fidelity</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/schitts-creek">Schitt's Creek</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/parks-and-recreation">Parks and Recreation</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/the-office-2005">The Office</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/offspring">Offspring</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/master-of-none">Master of None</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/love-life">Love Life</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/broad-city">Broad City</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/sweetbitter">Sweet Bitter</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/ramy">Ramy</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/the-crown">The Crown</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/the-white-lotus">The White Lotus</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/american-crime-story-the-assassination-of-gianni-versace">The
+                                Assassination of Gianni Versace </a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/mcmillion">McMillions</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/love-me">Love Me</a></li>
+                <li><a href="https://www.justwatch.com/au/tv-show/its-a-sin">It’s a Sin</a></li>
+        </ul>
+</div>
+
+<div class="Books">
+        <H2>Books:</H2>
+
+        <ul>
+                <li><a href="https://www.booktopia.com.au/normal-people-sally-rooney/book/9780571334650.html">Normal
+                                People -
+                                Sally Rooney</a></li>
+                <li><a href="https://www.booktopia.com.au/it-s-been-a-pleasure-noni-blake-claire-christian/book/9781922330215.html">It’s
+                                Been a Pleasure Noni Blake - Claire Christian </a></li>
+                <li><a href="https://www.booktopia.com.au/modern-romance-aziz-ansari/book/9780141981468.html">Modern
+                                Romance -
+                                Aziz Ansari</a></li>
+                <li><a href="https://www.booktopia.com.au/love-virtue-diana-reid/book/9781761150111.html">Love and
+                                Virtue -
+                                Diana Reid</a></li>
+                <li><a href="https://www.booktopia.com.au/beautiful-world-where-are-you-sally-rooney/book/9780571365432.html">Beautiful
+                                World Where Are You? - Salley Rooney </a></li>
+                <li><a href="https://www.booktopia.com.au/cult-status-tim-duggan/book/9781925700534.html">Cult Status -
+                                Tim
+                                Duggan </a></li>
+                <li><a href="https://www.booktopia.com.au/ghosts-dolly-alderton/book/9780241988688.html">Ghosts - Dolly
+                                Alderton</a></li>
+                <li><a href="https://www.booktopia.com.au/emotional-female-yumiko-kadota/book/9781760894634.html">Emotional
+                                Female - Yumiko Kadota </a></li>
+                <li><a href="https://www.booktopia.com.au/not-that-kind-of-girl-lena-dunham/book/9781460750667.html">Not
+                                That
+                                Kind of Girl - Lena Dunham</a></li>
+                <li><a href="https://www.booktopia.com.au/the-girl-before-jp-delaney/book/9781786480262.html">The Girl
+                                Before -
+                                JP Delaney </a></li>
+                <li><a href="https://www.booktopia.com.au/lean-in-sheryl-sandberg/book/9780753541647.html">Lean In -
+                                Sheryl
+                                Sandberg</a></li>
+                <li><a href="https://www.booktopia.com.au/everything-i-know-about-love-dolly-alderton/book/9780241982105.html">Everything
+                                I Know About Love - Dolly Alderton </a></li>
+                <li><a href="https://www.booktopia.com.au/no-rules-rules-reed-hastings/book/9780753553664.html">No Rules
+                                Rules -
+                                Reed Hastings, Erin Meyer </a></li>
+                <li><a href="https://www.booktopia.com.au/not-just-lucky-jamila-rizvi/book/9780143783541.html">Not Just
+                                Lucky -
+                                Jamila Rizvi </a></li>
+                <li><a href="https://www.booktopia.com.au/the-road-trip-beth-o-leary/book/9781529409093.html">The
+                                Flatshare -
+                                Beth O’Leary</a></li>
+                <li><a href="https://www.booktopia.com.au/becoming-michelle-obama/book/9780241982976.html">Becoming -
+                                Michelle
+                                Obama </a></li>
+                <li><a href="https://www.booktopia.com.au/the-panic-years-nell-frizzell/book/9781529176285.html">The
+                                Panic Years
+                                - Nell Frizzell</a></li>
+        </ul>
+</div>
+
+
+<div class="Movies">
+        <H2>Movies:</H2>
+        <ul>
+                <li><a href=" https://www.justwatch.com/au/movie/500-days-of-summer">(500) Days of Summer</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/la-la-land">La La Land</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/a-star-is-born-2018">A Star Is Born</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/call-me-by-your-name">Call Me By Your Name</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/juno">Juno</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/an-education">Education</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/her">Her</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/bridesmaids">Bridesmaids</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/the-devil-wears-prada">The Devil Wears Prada</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/the-september-issue">The September Issue</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/promising-young-woman">Promising Young Woman</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/three-identical-strangers">Three Identical Strangers</a>
+                </li>
+                <li><a href="https://www.justwatch.com/au/movie/on-the-rocks">On The Rocks</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/trainwreck">Trainwreck</a></li>
+                <li><a href="https://www.justwatch.com/au/movie/mean-girls-1">Mean Girls</a></li>
+        </ul>
+</div>
+
+<p>*No judgement please! There’s no such thing as a bad recommendation right?</p>
