--- a/contact.html
+++ b/contact.html
@@ -1,60 +1,58 @@
 <!doctype html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Contact Me</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
 
-    <div class="nav">
-        <div class="logo"> <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a></div>
-         <a href="about-me.html">About Me | </a>  
-         <a href="portfolio.html" >Portfolio | </a> 
-         <a href="contact.html" >Contact Me | </a>
-         <a href="tunes.html" >Tunes | </a>
-         <a href="whats-the-stack.html" >What's The Stack | </a>
-         <a href="recommendations.html" >Recommendations </a> 
-         <a href="recommendations.html" >Recommendations 2 </a> 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Contact Me</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-     </div>
-     <!--test-->
+<div class="nav">
+    <div class="logo"> <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a>
+    </div>
+    <a href="about-me.html">About Me | </a>
+    <a href="portfolio.html">Portfolio | </a>
+    <a href="contact.html">Contact Me | </a>
+    <a href="tunes.html">Tunes | </a>
+    <a href="whats-the-stack.html">What's The Stack | </a>
+    <a href="recommendations.html">Recommendations </a>
 
-    <body>
+</div>
+<!--test-->
 
-        <header>
-                <!--Cover Image-->
-               <img class="banner-image" id="contact-banner" src="images/lets-chat.jpg" alt="Let's Chat Cover Image">
-                <!--Navigation links to other pages-->
-                <nav>
-                    <a href="index.html">Home</a>
-                </nav>     
-            </header>
+<body>
 
-        <form action="https://formspree.io/f/mwkyrrwl" method="post">
-        
-           <div class = "form-item">
-               <label class = "form-text" for="name">Name</label>
-               <input type="text" id="name" name="Name">
-           </div>
+    <header>
+        <!--Cover Image-->
+        <img class="banner-image" id="contact-banner" src="images/lets-chat.jpg" alt="Let's Chat Cover Image">
+    </header>
 
-           <div class = "form-item">
-               <label class = "form-text" for="mail">Email</label>
-               <input type="email" id="mail" name="email">
-           </div>
+    <form action="https://formspree.io/f/mwkyrrwl" method="post">
 
-           <div class="form-item">
-               <label  class = "form-text" for="message">Message</label>
-               <textarea id="message" name="Message"></textarea>
-           </div>
+        <div class="form-item">
+            <label class="form-text" for="name">Name</label>
+            <input type="text" id="name" name="Name">
+        </div>
 
-           <div class="form-item">
-               <button class = "form-text" type="submit">Send</button>
-           </div>
-        
+        <div class="form-item">
+            <label class="form-text" for="mail">Email</label>
+            <input type="email" id="mail" name="email">
+        </div>
 
-        </form>
+        <div class="form-item">
+            <label class="form-text" for="message">Message</label>
+            <textarea id="message" name="Message"></textarea>
+        </div>
 
-    </body>
+        <div class="form-item">
+            <button class="form-text" type="submit">Send</button>
+        </div>
+
+
+    </form>
+
+</body>
+
 </html>
