--- a/portfolio.html
+++ b/portfolio.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title> Tunes</title>
-        <meta name="description" content="Projects">
-        <meta name="author" content="Emily Conaghan">
-        <link rel="stylesheet" href="styles.css"> 
-    </head>
 
-    <div class="nav">
-        <div class="logo"> <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a></div>
-         <a href="about-me.html">About Me | </a>  
-         <a href="portfolio.html" >Portfolio | </a> 
-         <a href="contact.html" >Contact Me | </a>
-         <a href="tunes.html" >Tunes | </a>
-         <a href="whats-the-stack.html" >What's The Stack | </a>
-         <a href="recommendations.html" >Recommendations </a> 
-     </div>
+<head>
+    <meta charset="utf-8">
+    <title> Tunes</title>
+    <meta name="description" content="Projects">
+    <meta name="author" content="Emily Conaghan">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-    <body>
-        <header>
-            <!--Cover Image-->
-           <img class="banner-image" id="projects-banner" src="images/projects.jpg" alt="Projects Cover Image">
-            <!--Navigation links to other pages-->
-            <nav>
-                <a href="index.html">Home</a>
-            </nav>     
-        </header>
-    </body>
+<div class="nav" style="display: flex;justify-content: space-around;">
+    <div class="logo" style="width: 30%;"> <a href="index.html" style="width: 100%;height: 100%;"><img id="logo-image"
+                src="images/Logo.png" alt="Emily Conaghan Logo"></a></div>
+    <div class="options" style="width: 70%;display: flex;align-items: center;justify-content: space-around;">
+        <a href="about-me.html">About Me | </a>
+        <a href="portfolio.html">Portfolio | </a>
+        <a href="contact.html">Contact Me | </a>
+        <a href="tunes.html">Tunes | </a>
+        <a href="whats-the-stack.html">What's The Stack | </a>
+        <a href="recommendations.html">Recommendations </a>
+    </div>
+</div>
+
+<body>
+    <header>
+        <!--Cover Image-->
+        <img class="banner-image" id="projects-banner" src="images/projects.jpg" alt="Projects Cover Image">
+    </header>
+</body>
