--- a/tunes.html
+++ b/tunes.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title> Tunes</title>
-        <meta name="description" content="Tunes">
-        <meta name="author" content="Emily Conaghan">
-        <link rel="stylesheet" href="styles.css"> 
-    </head>
 
-    <div class="nav">
-        <div class="logo"> <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a></div>
-         <a href="about-me.html">About Me | </a>  
-         <a href="portfolio.html" >Portfolio | </a> 
-         <a href="contact.html" >Contact Me | </a>
-         <a href="tunes.html" >Tunes | </a>
-         <a href="whats-the-stack.html" >What's The Stack | </a>
-         <a href="recommendations.html" >Recommendations </a> 
-     </div>
+<head>
+    <meta charset="utf-8">
+    <title> Tunes</title>
+    <meta name="description" content="Tunes">
+    <meta name="author" content="Emily Conaghan">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-    <body>
-        <header>
-            <!--Cover Image-->
-           <img class="banner-image" id="tunes-banner" src="images/tunes.jpg" alt="Tunes Cover Image">
-            <!--Navigation links to other pages-->
-            <nav>
-                <a href="index.html">Home</a>
-            </nav>     
-        </header>
-    </body>
+<div class="nav">
+    <div class="logo"> <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a>
+    </div>
+    <a href="about-me.html">About Me | </a>
+    <a href="portfolio.html">Portfolio | </a>
+    <a href="contact.html">Contact Me | </a>
+    <a href="tunes.html">Tunes | </a>
+    <a href="whats-the-stack.html">What's The Stack | </a>
+    <a href="recommendations.html">Recommendations </a>
+</div>
 
-<iframe id="spotify-widget"
-src="https://open.spotify.com/embed/playlist/5fFu83BnqMJRW7kFbf4SqD" 
-width="600" 
-height="760" 
-frameborder="0" 
-allow-transparency="true" 
-allow="encrypted-media">
-</iframe>
+<body>
+    <header>
+        <!--Cover Image-->
+        <img class="banner-image" id="tunes-banner" src="images/tunes.jpg" alt="Tunes Cover Image">
+    </header>
+</body>
+
+<h2>Here's what I listen to while I code...</h2>
+
+<div class="spotify">
+    <iframe id="spotify-widget" src="https://open.spotify.com/embed/playlist/5fFu83BnqMJRW7kFbf4SqD" width="75%"
+        height="650px" frameborder="0" allow-transparency="true" allow="encrypted-media" display="block">
+
+    </iframe>
+</div>
