--- a/about-me.html
+++ b/about-me.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--Meta Tags-->
+
 <head>
     <meta charset="utf-8">
     <title> Emily Conaghan | About Me</title>
@@ -8,6 +10,8 @@
     <meta name="author" content="Emily Conaghan">
     <link rel="stylesheet" href="styles.css">
 </head>
+
+<!-- Navigation Bar-->
 
 <div class="nav">
     <div class="logo"> <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a>
@@ -27,13 +31,15 @@
         <!--Cover Image-->
         <img class="banner-image" id="about-me-banner" src="images/about-me.jpg" alt="About Me Cover Image">
     </header>
-    <div>
-        <h1>Hi there... I'm Emily! Nice to meet you! </h1>
+    <!-- content-->
+    <div class="about-me-div">
+        <h1>Hi there... I'm Emily!</h1>
+        <h1>Nice to meet you! </h1>
 
         <h2>So… Do you want the short story, or the long story? </h2>
         <h2>Oh… The medium story? I guess I can do that too…</h2>
         <p> I graduated high school with a glint in my eye and the ambition to be a doctor. I started studying a
-            Bachelor of Biomedical Science at The University of Queensland an after a handful of chemistry classes, I
+            Bachelor of Biomedical Science at The University of Queensland. After a handful of chemistry classes, I
             quickly realised that I didn’t want to be a doctor… I had in fact, just watched too much Grey’s Anatomy.
         </p>
 
@@ -71,8 +77,8 @@
 
         <p>You can contact me <a class="a1" href="contact.html">here.</a></p>
 
-
-
+        <h2>Thanks for reading!</h2>
+        <h1>Emily</h1>
 
 
     </div>
