--- a/index.html
+++ b/index.html
@@ -22,15 +22,9 @@
 <body class="index-body">
     <header>
         <!--Cover Image-->
-        <img class="banner-image" id="homepage-banner" src="images/emily-conaghan.jpg" alt="Emily Conaghan Cover Image">
+        <img class="index-image" id="homepage-banner" src="images/emily-conaghan.jpg" alt="Emily Conaghan Cover Image">
     </header>
-    <div>
-        <p>Welcome to my portfolio!</p>
-    </div>
 </body>
-
-
-</html>
 
 <body>
     <div class="whole-div">
@@ -58,12 +52,15 @@
             <a href="recommendations.html">Recommendations</a>
         </div>
     </div>
-
 </body>
 
 <footer>
     <nav>
-        <a href="https://www.linkedin.com/in/emily-conaghan/">LinkedIn</a>
-        <a href="https://github.com/emilyconaghan/emilyconaghan">Github</a>
+        <div class="link-logos">
+            <a href="https://www.linkedin.com/in/emily-conaghan/"><img src="images/linkedin.png" alt="LinkedIn"
+                    width="30px" height="30px"> </a>
+            <a href="https://github.com/emilyconaghan/emilyconaghan"><img src="images/github.png" alt="github"
+                    width="30px" height="30px"></a>
+        </div>
     </nav>
 </footer>
