--- a/portfolio.html
+++ b/portfolio.html
@@ -3,23 +3,21 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Tunes</title>
+    <title>Projects</title>
     <meta name="description" content="Projects">
     <meta name="author" content="Emily Conaghan">
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<div class="nav" style="display: flex;justify-content: space-around;">
-    <div class="logo" style="width: 30%;"> <a href="index.html" style="width: 100%;height: 100%;"><img id="logo-image"
-                src="images/Logo.png" alt="Emily Conaghan Logo"></a></div>
-    <div class="options" style="width: 70%;display: flex;align-items: center;justify-content: space-around;">
-        <a href="about-me.html">About Me | </a>
-        <a href="portfolio.html">Portfolio | </a>
-        <a href="contact.html">Contact Me | </a>
-        <a href="tunes.html">Tunes | </a>
-        <a href="whats-the-stack.html">What's The Stack | </a>
-        <a href="recommendations.html">Recommendations </a>
+<div class="nav">
+    <div class="logo"> <a href="index.html"><img id="logo-image" src="images/Logo.png" alt="Emily Conaghan Logo"></a>
     </div>
+    <a href="about-me.html">About Me | </a>
+    <a href="portfolio.html">Portfolio | </a>
+    <a href="contact.html">Contact Me | </a>
+    <a href="tunes.html">Tunes | </a>
+    <a href="whats-the-stack.html">What's The Stack | </a>
+    <a href="recommendations.html">Recommendations </a>
 </div>
 
 <body>
@@ -28,3 +26,38 @@
         <img class="banner-image" id="projects-banner" src="images/projects.jpg" alt="Projects Cover Image">
     </header>
 </body>
+
+<body>
+    <section>
+        <div class="card-projects">
+            <img src="images/Project1.png" alt="Project 1 Image">
+            <h2 class="sub-card-heading">Project 1</h2>
+            <a>Python</a>
+            <p>This is where my Python Project will live</p>
+        </div>
+
+        <div class="card-projects">
+            <img src="images/Project2.png" alt="Project 2 Image">
+            <h2 class="sub-card-heading">Project 2</h2>
+            <a>DRF</a>
+            <p>This is where my DRF Project will live</p>
+        </div>
+
+        <div class="card-projects">
+            <img src="images/Project3.png" alt="Project 3 Image">
+            <h2 class="sub-card-heading">Project 3</h2>
+            <a>ReactJS</a>
+            <p>This is where my React Project will live</p>
+        </div>
+
+        <div class="card-projects">
+            <img src="images/Project4.png" alt="Project 4 Image">
+            <h2 class="sub-card-heading">Project 4</h2>
+            <a>Group Project</a>
+            <p>This is where my Group Project will live</p>
+        </div>
+
+    </section>
+</body>
+
+</html>
