--- a/recommendations.html
+++ b/recommendations.html
@@ -25,17 +25,17 @@
         <header>
                 <!--Cover Image-->
                 <img class="banner-image" id="recommendations-banner" src="images/recommendations.jpg"
-                        alt="Tunes Cover Image">
+                        alt="Recommendations Cover Image">
         </header>
 </body>
 
-<div class="Recommendation Intro">
+<div class="Recommendation-Intro">
         <H1>If there’s two things I love, it’s content and recommendations. </H1>
         <H2>I love sharing my favourite things I’ve read, listened to and watched and I love receiving a good
-                recommendation
-                in return. Here’s a pretty extensive list of some of my favourite things* (sort of like Oprah, but with
-                less
-                yelling and free cars…):</H2>
+                recommendation in return.</H2>
+
+        <H2>Here’s a pretty extensive list of some of my favourite things* (sort of like Oprah, but with
+                less yelling and free cars…):</H2>
 
 </div>
 
