--- a/whats-the-stack.html
+++ b/whats-the-stack.html
@@ -28,45 +28,107 @@
 
     </header>
 </body>
+<h2>What's The Stack is a labor of love from me and my Work-Wife Carly Shearman. Carly and I sit down with some of the
+    best and brightest in Brisbane tech to learn all about their careers and how they got to where they are today.</h2>
 
 <body>
-    <div class="index-div" id="index-div-1">
-        <a href="https://www.youtube.com/watch?v=m773_CN1o3o">Welcome to What's The Stack!
-            <img class="WTS-image" id="WTS-ep1" src="images/WTS1.jpg" alt="What's The Stack 1">
+    <section>
+        <a href="https://www.youtube.com/watch?v=m773_CN1o3o">
+            <div class="card">
+                <img src="images/WTS1.jpg" alt="What's The Stack Episode 1 Image">
+                <h2 class="sub-card-heading">Season 1: Episode 1</h2>
+                <a>Welcome to What's The Stack!</a>
+                <p>Carly and Emily introduce you to What's The Stack!</p>
+            </div>
         </a>
-    </div>
 
-    <div class="index-div" id="index-div-2">
-        <a href="https://www.youtube.com/watch?v=uoc34BNCRIg">Episode 1: Adam Skinner</a>
-    </div>
+        <a href="https://www.youtube.com/watch?v=uoc34BNCRIg">
+            <div class="card">
+                <img src="images/WTS2.jpg" alt="What's The Stack Episode 2 Image">
+                <h2 class="sub-card-heading">Season 1: Episode 2</h2>
+                <a>Adam Skinner</a>
+                <p>
+                    Carly and Emily sit down with Adam Skinner from CitrusAd.
+                </p>
+            </div>
+        </a>
 
-    <div class="index-div" id="index-div-3">
-        <a href="https://www.youtube.com/watch?v=N2UfRiaPXOs">Episode 2: Carlie Hamilton</a>
-    </div>
+        <a href="https://www.youtube.com/watch?v=N2UfRiaPXOs">
+            <div class="card">
+                <img src="images/WTS3.jpg" alt="What's The Stack Episode 3 Image">
+                <h2 class="sub-card-heading">Season 1: Episode 3</h2>
+                <a>Carlie Hamilton</a>
+                <p>
+                    Carly and Emily have a chat with Carlie Hamilton from Atlassian.
+                </p>
+            </div>
+        </a>
 
-    <div class="index-div" id="index-div-4">
-        <a href="https://www.youtube.com/watch?v=T84V0dWiiKU">Episode 3: Sorcha Abel</a>
-    </div>
+        <a href="https://www.youtube.com/watch?v=T84V0dWiiKU">
+            <div class="card">
+                <img src="images/WTS4.jpg" alt="What's The Stack Episode 4 Image">
+                <h2 class="sub-card-heading">Season 1: Episode 4</h2>
+                <a>Sorcha Abel</a>
+                <p>
+                    Carly and Emily sit down with Sorcha Abel from Culture Amp.
+                </p>
+            </div>
+        </a>
 
-    <div class="index-div" id="index-div-5">
-        <a href="https://www.youtube.com/watch?v=ftPSGCn4Ivk">Episode 4: Lachlan Young</a>
-    </div>
+        <a href="https://www.youtube.com/watch?v=ftPSGCn4Ivk">
+            <div class="card">
+                <img src="images/WTS5.jpg" alt="What's The Stack Episode 5 Image">
+                <h2 class="sub-card-heading">Season 1: Episode 5</h2>
+                <a>Lachlan Young</a>
+                <p>
+                    Carly and Emily have a chat with Lachlan Young from Tanda.
+                </p>
+            </div>
+        </a>
 
-    <div class="index-div" id="index-div-6">
-        <a href="https://www.youtube.com/watch?v=Jm-nW7SDzAQ">Episode 5: Teena Glassick</a>
-    </div>
+        <a href="https://www.youtube.com/watch?v=Jm-nW7SDzAQ">
+            <div class="card">
+                <img src="images/WTS6.jpg" alt="What's The Stack Episode 6 Image">
+                <h2 class="sub-card-heading">Season 1: Episode 6</h2>
+                <a>Teena Glassick</a>
+                <p>
+                    Carly and Emily sit down with Teena Glassick from Skedulo.
+                </p>
+            </div>
+        </a>
 
-    <div class="index-div" id="index-div-7">
-        <a href="https://www.youtube.com/watch?v=mO2iLOx-uFY">Episode 6: Nikki Williamson</a>
-    </div>
+        <a href="https://www.youtube.com/watch?v=mO2iLOx-uFY">
+            <div class="card">
+                <img src="images/WTS7.jpg" alt="What's The Stack Episode 7 Image">
+                <h2 class="sub-card-heading">Season 1: Episode 7</h2>
+                <a>Nikki Williamson</a>
+                <p>
+                    Carly and Emily sit down with Nikki Williamson from Swyftx
+                </p>
+            </div>
+        </a>
 
-    <div class="index-div" id="index-div-8">
-        <a href="https://www.youtube.com/watch?v=Q3NFkc7EG2U">Episode 7: Scott Warren </a>
-    </div>
+        <a href="https://www.youtube.com/watch?v=Q3NFkc7EG2U">
+            <div class="card">
+                <img src="images/WTS8.jpg" alt="What's The Stack Episode 8 Image">
+                <h2 class="sub-card-heading">Season 1: Episode 8</h2>
+                <a>Scott Warren</a>
+                <p>
+                    Carly and Emily have a chat with Scott Warren from RexLabs.
+                </p>
+            </div>
+        </a>
 
-    <div class="index-div" id="index-div-9">
-        <a href="https://www.youtube.com/watch?v=EUvUt4kMkwA">Episode 8: Carly Shearman and Emily Conaghan</a>
-    </div>
+        <a href="https://www.youtube.com/watch?v=EUvUt4kMkwA">
+            <div class="card">
+                <img src="images/WTS9.jpg" alt="What's The Stack Episode 9 Image">
+                <h2 class="sub-card-heading">Season 1: Episode 9</h2>
+                <a>Carly Shearman and Emily Conaghan</a>
+                <p>
+                    Carly and Emily wrap up Season 1 of What's The Stack by sitting down with eachother!
+                </p>
+            </div>
+        </a>
 
-
+    </section>
 </body>
