--- a/about-me.html
+++ b/about-me.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--Meta Tags-->
-
 <head>
     <meta charset="utf-8">
-    <title> Emily Conaghan | About Me</title>
-    <meta name="description" content="Emily Conaghan | About Me">
+    <title> About Me</title>
+    <meta name="description" content="About Me">
     <meta name="author" content="Emily Conaghan">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -83,3 +83,7 @@
 
     </div>
 </body>
+
+<footer>
+    © Emily Conaghan 2022
+</footer>
