--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Contact Me</title>
+    <title> Contact Me</title>
+    <meta name="description" content="Contact Me Form">
+    <meta name="author" content="Emily Conaghan">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -17,7 +19,7 @@
     <a href="contact.html">Contact Me | </a>
     <a href="tunes.html">Tunes | </a>
     <a href="whats-the-stack.html">What's The Stack | </a>
-    <a href="recommendations.html">Recommendations</a>
+    <a href="recommendations.html">Recommendations </a>
 </div>
 
 <body>
@@ -54,3 +56,7 @@
 </body>
 
 </html>
+
+<footer>
+    © Emily Conaghan 2022
+</footer>
