--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Projects</title>
+    <title> Projects</title>
     <meta name="description" content="Projects">
     <meta name="author" content="Emily Conaghan">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -61,3 +63,7 @@
 </body>
 
 </html>
+
+<footer>
+    © Emily Conaghan 2022
+</footer>
