--- a/tunes.html
+++ b/tunes.html
@@ -6,6 +6,8 @@
     <title> Tunes</title>
     <meta name="description" content="Tunes">
     <meta name="author" content="Emily Conaghan">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -35,3 +37,7 @@
 
     </iframe>
 </div>
+
+<footer>
+    © Emily Conaghan 2022
+</footer>
