--- a/whats-the-stack.html
+++ b/whats-the-stack.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title> What's The Stack</title>
-    <meta name="description" content="What's The Stack">
+    <title> Tunes</title>
+    <meta name="description" content="Tunes">
     <meta name="author" content="Emily Conaghan">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -132,3 +134,7 @@
 
     </section>
 </body>
+
+<footer>
+    © Emily Conaghan 2022
+</footer>
