Updates to contents ans styling

--- a/recommendations.html
+++ b/recommendations.html
@@ -44,7 +44,7 @@
 <div class="Podcasts">
         <H2>Podcasts:</H2>
 
-        <ul>
+        <ul class="Podcast-List">
                 <li><a href="https://open.spotify.com/show/6kAsbP8pxwaU2kPibKTuHE?si=cntseOJBTtODLV38kdJ76Q">Armchair
                                 Expert</a>
                 </li>
