--- a/whats-the-stack.html
+++ b/whats-the-stack.html
@@ -35,100 +35,19 @@
 
 <body>
     <section>
-        <a href="https://www.youtube.com/watch?v=m773_CN1o3o">
+        <a href="https://www.youtube.com/watch?v=RjE0zBeDkX8&list=PL1mDwQjstr0L4FYuAbUXnHJXHZaTp1chZ">
             <div class="card">
-                <img src="images/WTS1.jpg" alt="What's The Stack Episode 1 Image">
-                <h2 class="sub-card-heading">Season 1: Episode 1</h2>
+                <img src="images/Season1.png" alt="What's The Stack Season 1 Image">
+                <h2 class="sub-card-heading">What's The Stack: Season 1</h2>
                 <a>Welcome to What's The Stack!</a>
-                <p>Carly and Emily introduce you to What's The Stack!</p>
             </div>
         </a>
 
-        <a href="https://www.youtube.com/watch?v=uoc34BNCRIg">
+        <a href="https://www.youtube.com/watch?v=x9t9EBjwmrM&list=PL1mDwQjstr0IJ3ewpChs-MJXibGm7tuTa">
             <div class="card">
-                <img src="images/WTS2.jpg" alt="What's The Stack Episode 2 Image">
-                <h2 class="sub-card-heading">Season 1: Episode 2</h2>
-                <a>Adam Skinner</a>
-                <p>
-                    Carly and Emily sit down with Adam Skinner from CitrusAd.
-                </p>
-            </div>
-        </a>
-
-        <a href="https://www.youtube.com/watch?v=N2UfRiaPXOs">
-            <div class="card">
-                <img src="images/WTS3.jpg" alt="What's The Stack Episode 3 Image">
-                <h2 class="sub-card-heading">Season 1: Episode 3</h2>
-                <a>Carlie Hamilton</a>
-                <p>
-                    Carly and Emily have a chat with Carlie Hamilton from Atlassian.
-                </p>
-            </div>
-        </a>
-
-        <a href="https://www.youtube.com/watch?v=T84V0dWiiKU">
-            <div class="card">
-                <img src="images/WTS4.jpg" alt="What's The Stack Episode 4 Image">
-                <h2 class="sub-card-heading">Season 1: Episode 4</h2>
-                <a>Sorcha Abel</a>
-                <p>
-                    Carly and Emily sit down with Sorcha Abel from Culture Amp.
-                </p>
-            </div>
-        </a>
-
-        <a href="https://www.youtube.com/watch?v=ftPSGCn4Ivk">
-            <div class="card">
-                <img src="images/WTS5.jpg" alt="What's The Stack Episode 5 Image">
-                <h2 class="sub-card-heading">Season 1: Episode 5</h2>
-                <a>Lachlan Young</a>
-                <p>
-                    Carly and Emily have a chat with Lachlan Young from Tanda.
-                </p>
-            </div>
-        </a>
-
-        <a href="https://www.youtube.com/watch?v=Jm-nW7SDzAQ">
-            <div class="card">
-                <img src="images/WTS6.jpg" alt="What's The Stack Episode 6 Image">
-                <h2 class="sub-card-heading">Season 1: Episode 6</h2>
-                <a>Teena Glassick</a>
-                <p>
-                    Carly and Emily sit down with Teena Glassick from Skedulo.
-                </p>
-            </div>
-        </a>
-
-        <a href="https://www.youtube.com/watch?v=mO2iLOx-uFY">
-            <div class="card">
-                <img src="images/WTS7.jpg" alt="What's The Stack Episode 7 Image">
-                <h2 class="sub-card-heading">Season 1: Episode 7</h2>
-                <a>Nikki Williamson</a>
-                <p>
-                    Carly and Emily sit down with Nikki Williamson from Swyftx
-                </p>
-            </div>
-        </a>
-
-        <a href="https://www.youtube.com/watch?v=Q3NFkc7EG2U">
-            <div class="card">
-                <img src="images/WTS8.jpg" alt="What's The Stack Episode 8 Image">
-                <h2 class="sub-card-heading">Season 1: Episode 8</h2>
-                <a>Scott Warren</a>
-                <p>
-                    Carly and Emily have a chat with Scott Warren from RexLabs.
-                </p>
-            </div>
-        </a>
-
-        <a href="https://www.youtube.com/watch?v=EUvUt4kMkwA">
-            <div class="card">
-                <img src="images/WTS9.jpg" alt="What's The Stack Episode 9 Image">
-                <h2 class="sub-card-heading">Season 1: Episode 9</h2>
-                <a>Carly Shearman and Emily Conaghan</a>
-                <p>
-                    Carly and Emily wrap up Season 1 of What's The Stack by sitting down with eachother!
-                </p>
+                <img src="images/Season2.png" alt="What's The Stack Season 2 Image">
+                <h2 class="sub-card-heading">What's The Stack: Season 2</h2>
+                <a>The What's The Stack journey continues!</a>
             </div>
         </a>
 
